--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
     </dependencies>
 
 
